# DevOps-Course-Starter2021

./: .dockerignore  .env.j2  .env.template  .env.test  .gitignore  .terraform.lock.hcl  Dockerfile  README.md  bears-ansible-playbook.YML  bears-inventory.INI  deployment.yaml  docker-compose.yml  docker-entrypoint-dev.sh  docker-entrypoint-prod.sh  docker_entrypoint_launch.sh  env-secrets.template  main.tf  outputs.tf  pyproject.toml  todoapp.service  variables.tf
.github/workflows/: todoapp_pipeline.yaml  todoapp_pipline.yaml
documentation/: Context Diagram.vsdx
tests/: test_Integration.py  test_view_model.py
todo_app/: app.py  flask_config.py  view_model.py
todo_app/data/: session_items.py  todo_items.py  trello_items.py  user_login.py
todo_app/templates/: index.html  layout.html
