[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
requests = "^2.27.1"
gunicorn = "^20.1.0"
MarkupSafe = "2.0.1"
pymongo = "^4.3.2"
mongomock = "^4.1.2"
Flask-Login = "^0.6.2"
Flask-User = "^1.0.2"
flask_accept = "^0.0.6"

[tool.poetry.dev-dependencies]
freezegun = "^1.2.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
